// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography component should render a link w/ gatsby link 1`] = `
<div>
  <a
    class="sc-gsTCUz ikIRtL"
    href="/"
  >
    <span
      class="sc-bdfBwQ cXEaCg"
    >
      Hello Link 🎉
    </span>
  </a>
</div>
`;

exports[`Typography component should render a link w/ href 1`] = `
<div>
  <a
    class="sc-gsTCUz ikIRtL"
    href="/some-link"
  >
    <span
      class="sc-bdfBwQ cXEaCg"
    >
      Hello Link 🎉
    </span>
  </a>
</div>
`;
